--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=8zsC%2FXgWXn0Ls8UnYjIoYZaCp093Dp46UwSjIhTV2Tv65RlaS9n8l5i0Eikal3xGXKHRBDSWQQUlmyaYJ83YQ5sC31aY8CKF5IvSAQyrz94amn5YO7DWgrfWQkzJ53sDvoLuC7BDkDvHCHnQpsIb3t2TvxBnJb6WE7S4R1Ip3wHilw0SIAtYO7HMec7ecMmDDL77dLt9cbodbt1rDKcVfKNX4Iofir40jGJ6cH8PN48jZQjcsg6VK%2BMY0SXGib4h8o9FmeO0fcxk3ProUmwus1srkJs%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=hSVx84fjRmn2EQkja883%2BaAnsxvzzTiXRnvQeyFAtdF%2FTnQcjemXCgei%2BFPQZU674fxisCAfQvDe6uRb1U6s9Pr%2BSNV5qQYtTghXEuS7Db33yj0p8wNit%2FsMP6T%2Bpug8xBZb6ca2nIUjWZe4nE%2F%2FnSFujRocvhZPOYGQBIZWumIhuFBHFIRGXLf1VzoigyJiGrpBSC2gSBGZePqyZNsgETA0AW0C45rHDyVazIeUxxGXjOoivQWB0pr%2F5z8nhhm3rd6JfHBK9x6CI1juwm5LM9MObEY%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
